<resources>

    <string name="app_name">ProyectoFinal_TheDot</string>
    <string name="mensaje_bienvenida">"The art to survive is to believe you can always start over"</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="crea_cuenta">Crea tu cuenta</string>
    <string name="meditacion">Meditación</string>
    <string name="descripcion_meditacion">¿Qué es la meditación? Embárcate en un viaje que te dara\n mayor calma y claridad mental mediante técnicas\n básicas y una meditación guiada centrada en la\n respiración.</string>
    <string name="meditacion_atras_texto">Sacate ese peso de encima. Despreocupate del enojo, la\nfrustación y las nostalgia. Esta sencilla meditación guiada\naborda en forma amena la visualización.</string>
    <string name="meditacion_alcanza_texto">Abre tu mente. La práctica constante del mindfulnes\nhace ilimitadas nuestras posibilidades, y dirige una meditación de consciencia plena.</string>
    <string name="meditacion_lidia_texto">¿Sientes que todo es demasaido y la vida te abruma?\nCambia tu relación con la ansiedad y maneja el estrés\ncon una poderosa pero sencilla técnica de meditación.</string>
    <string name="metodos_respiracion_texto">A continuación te ofrecemos una serie de ejercicios\nde respiración sencillos que se pueden llevar a cabo\npara relajar tu cuerpo y mente.</string>
    <string name="favoritos">Favoritos</string>
    <string name="configuracion">Configuración</string>
    <string name="cerrar_sesion">Cerror sesión</string>
    <string name="journal">Mi Journal</string>
    <string name="profunda">Profunda</string>
    <string name="recuerda">*Recuerda que cada paso dura 4 segundos.</string>
    <string name="profunda_pasos">1.Toma aire por via nasal \n 2. Mantenlo en los pulmones \n 3.Sueltalo con suavidad por la boca</string>
    <string name="profundadesc">Este ejercicio es uno de los mas secillos, te ayuda a tranquilizarte despues de una situación de estrés o esfuerzo.</string>
    <string name="diafragmatica">Diafragmática</string>
    <string name="completa">Completa</string>
    <string name="alternada">Alternada</string>
    <string name="muscular">Muscular</string>
    <string name="metodos_respiracion">Métodos de respiración</string>
    <string name="intenciones_dia">*Intenciones del dia</string>
    <string name="intenciones_semana">*Intenciones de la semana</string>
    <string name="activo">/ ACTIVO</string>
    <string name="about">About</string>
    <string name="comienza">Comienza</string>
    <string name="respiracion_muscular_desc">Se trata de una tecnica de relajación que incluye control de la respiracion y la tensión de los musculos.</string>
    <string name="respiracion_muscular_paso1">1. Con los ojos cerrados y una postura comoda se procede  a mantener una respiracion profunda y regular.</string>
    <string name="respiracion_muscular_paso2">2. Posteriormente se procede a realizar un recorrido por el conjunto de grupos musculares del cuerpo.</string>
    <string name="respiracion_muscular_paso3">3. Cada grupo muscular sera tensado en periodos de 3-10 segundos para posteriomente descansar entre 10-30 segundos.</string>
    <string name="respiracion_completa_desc">Este tipo de respiración aúna en una sola técnica de respiración profunda abdominal.</string>
    <string name="respiracion_completa_paso1">1. Comienza con la expulsión de todo el aire en los pulmones.</string>
    <string name="respiracion_completa_paso2">2. Se procede inspirano suave y profundamente hasta llenar el primer lugar del abdomen. Para continuar inhalando hasta llenar también los pulmones y el pecho en la misma inhalación..</string>
    <string name="respiracion_completa_paso3">3. Se mantiene el aire unos segundos y posteriormente se procede a expulsar oralmente.</string>
    <string name="respiracion_description">La respiracion es una de las funciones básicas del organismo que nos permite obtener el oxígeno necesario para la supervivencia. Entrenar esta funcion puede contribuir en gran medida a reducir el nivel de estres.</string>
    <string name="recordatorio_description">Ayudan a mejorar nuestros habitos y a recordarnos pequeños detalles saludables que cambian y aportan estabilidad a nuestra vida. </string>
    <string name="estatico">/ ESTÁTICO</string>
    <string name="estiramiento">Estiramiento</string>
    <string name="deja_atras_estres">Deja atrás el estrés</string>
    <string name="lidia_estres">Lidia con el estrés</string>
    <string name="alcanza_tu_potencial">Alcanza tu potencial sin límites</string>
    <string name="inicia">inicia</string>
    <string name="sesión">sesión</string>
    <string name="tecnicas">Tecnicas</string>
    <string name="tecnica_dedos">Técnica de los dedos</string>
    <string name="trazos">Trazos</string>
    <string name="muevete">Muevete</string>
    <string name="metrespiracion">Metodos de Respiracion</string>
    <string name="email">correo electonico</string>
    <string name="pasword">contraseña</string>
    <string name="crea">crea</string>
    <string name="tu">tu</string>
    <string name="cuenta">cuenta</string>
    <string name="pasivo">/ PASIVO</string>
    <string name="respiracion">/ Respiracion Profunda</string>
    <string name="hola">¡Hola Fer!</string>
    <string name="metodos">Métodos</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="recordatorios">Recordatorios</string>
    <string name="afirmaciones">Afirmaciones</string>
    <string name="agenda">Agenda</string>
    <string name="pulgar"><b>1. Pulgar:</b> Está relacionado de manera directa con el estomago y el bazo. el dedo pulgar hace alusión a la preocupacion y alestrés tanto a nivel mental como físico.</string>
    <string name="indice"><b>2. Índice:</b> Representa directamente al miedo que puede incluso paralizar. Nos ayuda a mantenernos firmes y de pie.</string>
    <string name="medio"><b>3. Medio:</b> Es el dedo del corazón. Encarnala ira, la agresividad y el cansancio. De alli que se vincule fisicamente con la vesicula y el higado.</string>
    <string name="anular"><b>4. Anular:</b> Conectado con el intestino grueso y el pulmón. Hace alusión a la tristeza. Este dedo es vital para la toma de decisiones.</string>
    <string name="menique"><b>5. Meñique:</b> Se relaciona con la pretención, es decir, pretender ser algo que no es, la ansiedad, la apatia, la falta de energía. Se conecta directamente con la lucha y el esfuerzo. Sus organos ligados son el intestino delgado y el corazón.</string>
    <string name="palma"><b>6. Centro de la palma:</b> Reúne a todo lo anteriormente dicho. Sujetando el centro de la palma de la mano se puede llevar a cabo muchas cosas inmediatamente, tiene relacion con el diafragma y la respiracion.</string>
    <string name="metas">Metas</string>
    <string name="pasivoDesc">Debe estar relajado, sin hacer fuerza alguna que contribuya al rango de movilidad de la articulación que se está trabajando. La uerza  externa necesaria puede ser suministrada por un compañero, por un aparato , o bien utilizando el propio peso del miembro en cuestion cuando éste sea suficiente.</string>
    <string name="activoDesc">Es necesario para realizar movimientos y mantener posturas utilizando los propios musculos.Em el primer caso solo utilizaremos los musculos y , a lo sumo, la resistencia impuesta por la gravedad en el peso del miembro implicado en la articulacion, en el segundo caso utilizaremos una resistencia externa como puede ser peso, un aparato, una pared, etc.</string>
    <string name="nombre_usuario">nombre de usuario</string>
    <string name="correo">correo electrónico</string>
    <string name="contrasenia">contraseña</string>
    <string name="estaticoDesc">Consiste en estirar el músculo concreto hasta el punto maximo de su movilidad y mantenerlo en esa posición durante un tiempo que ira siendo mayor a medida que se tenga más practica. Es el método más seguro y efectivo para desarrollar o mantener la flexibilidad y es el utilizado por los practicantes de hatha yoga.</string>
    <string name="confirmar_contrasenia">confirmar contraseña</string>
    <string name="estres">/ SEGÚN LA RAE EL ESTRÉS ES UNA TENSIÓN PROVOCADA POR SITUACIONES AGOBIANTES QUE ORIGINAN REACCIONES PSICOSOMÁTICAS O TRANSTORNOS PSICOLÓGICOS QUE EN OCACIONES SON GRAVES. </string>
    <string name="perfil_description">Soy Fer, tengo 18 años y actualmente estoy estudiando la Licenciatura en Fisioterapia. Me gusta mucho tomar cafe , bailar y pintar.</string>
    <string name="metodos_description">Queremos que lleves una vida mas tranquila. Por eso, te dejamos a continuación una serie de metodosque ayudan a manejar el estrés y lograr la relajación</string>
    <string name="the_dot_text">THE DOT ES UNA APP\n PARA EL MANEJO DEL\nESTRÉS, LA CUÁL\nAPOYA AL USUARIO\nCON TÉCNICAS DE\nRELAJACIÓN, INFORMACIÓN\nde valor y sobre\nTODO ESTANDO CERCA\nDE EL.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>