<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:orientation="vertical"
    tools:context=".CrearCuenta">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/boton_regresar_crear_cuenta"
            android:layout_width="55dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginStart="52dp"
            android:background="@drawable/regresar1_xxxdpi_06" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="95dp"
            app:srcCompat="@drawable/simbolo_xxxdpi_06" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="Crea\ntu\ncuenta"
        android:textColor="@color/gris_oscuro"
        android:layout_marginBottom="30dp"
        android:textSize="60sp" />


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="textPersonName"
            android:backgroundTint="@color/azul_claro"
            android:layout_marginBottom="20dp"
            android:text="@string/nombre_usuario" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="textPersonName"
            android:backgroundTint="@color/azul_claro"
            android:layout_marginBottom="20dp"
            android:text="@string/correo" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="textPersonName"
            android:backgroundTint="@color/azul_claro"
            android:layout_marginBottom="20dp"
            android:text="@string/contrasenia" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="textPersonName"
            android:backgroundTint="@color/azul_claro"
            android:layout_marginBottom="20dp"
            android:text="@string/confirmar_contrasenia" />

        <Button
            android:id="@+id/boton_crea_cuenta"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:backgroundTint="@color/azul_claro"
            android:text="@string/crea_cuenta"
            app:cornerRadius="50dp" />
    </LinearLayout>


</LinearLayout>