<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:orientation="vertical"
    tools:context=".ui.ui.metodos.meditacion.ActivityMeditacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/btnRegresarM"
            android:layout_width="55dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/btn_regresar_margin_start"
            android:layout_marginEnd="35dp"
            android:background="@drawable/regresar_xxxdpi_06" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="100dp"
            android:text="@string/meditacion"
            android:textAlignment="center"
            android:textColor="@color/gris_oscuro"
            android:fontFamily="@font/agne_regular"
            android:textStyle="bold"
            android:textSize="@dimen/tamanio_titulos" />
    </LinearLayout>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginStart="25dp"
      android:layout_marginEnd="25dp"
      android:orientation="vertical">
      <Button
          android:id="@+id/btn_comienza"
          android:layout_width="match_parent"
          android:layout_height="110dp"
          android:layout_marginBottom="10dp"
          android:backgroundTint="@color/anaranjado_claro"
          android:text="@string/comienza"
          android:textSize="@dimen/tamanio_texto_botones"
          android:fontFamily="@font/playfair_display_wght"
          android:textAllCaps="false"
          app:cornerRadius="30dp" />

      <Button
          android:id="@+id/btnDejaEstres"
          android:layout_width="match_parent"
          android:layout_height="110dp"
          android:layout_marginBottom="10dp"
          android:backgroundTint="@color/azul"
          android:text="@string/deja_atras_estres"
          android:textSize="@dimen/tamanio_texto_botones"
          android:fontFamily="@font/playfair_display_wght"
          android:textAllCaps="false"
          app:cornerRadius="30dp" />

      <Button
          android:id="@+id/btnLidiaEstres"
          android:layout_width="match_parent"
          android:layout_height="110dp"
          android:layout_marginBottom="10dp"
          android:backgroundTint="@color/verde_azulado"
          android:text="@string/lidia_estres"
          android:textSize="@dimen/tamanio_texto_botones"
          android:fontFamily="@font/playfair_display_wght"
          android:textAllCaps="false"
          app:cornerRadius="30dp" />

      <Button
          android:id="@+id/btnAlcanzaPotencial"
          android:layout_width="match_parent"
          android:layout_height="110dp"
          android:backgroundTint="@color/lavanda"
          android:text="@string/alcanza_tu_potencial"
          android:textSize="@dimen/tamanio_texto_botones"
          android:fontFamily="@font/playfair_display_wght"
          android:textAllCaps="false"
          app:cornerRadius="30dp" />


      <ImageView
          android:layout_width="130dp"
          android:layout_height="match_parent"
          android:layout_gravity="center_horizontal"
          app:srcCompat="@drawable/simbolo2_xxdpi_05" />

  </LinearLayout>


</LinearLayout>