<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blanco"
    tools:context=".ui.ui.metodos.respiracion.activity_respiracion_completa">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/btnRegresar"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/btn_regresar_margin_start"
            android:background="@drawable/regresar_xxxdpi_06" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="100dp"
            android:text="@string/metrespiracion"
            android:textAlignment="center"
            android:textColor="@color/gris_oscuro"
            android:fontFamily="@font/agne_regular"
            android:textSize="@dimen/tamanio_titulos" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="/Respiracion \Completa"
        android:textAlignment="textStart"
        android:textColor="@color/gris"
        android:fontFamily="@font/gt_america_regular"
        android:textSize="44sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="400dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/trazado5_xxxdpi_06" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/layout_redondeado_con_color"
            android:backgroundTint="@color/lavanda">


        </LinearLayout>


        <TextView
            android:layout_marginTop="35dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/respiracion_completa_desc"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:layout_marginTop="80dp"
            android:layout_width="300dp"
            android:layout_marginLeft="50dp"
            android:layout_height="wrap_content"
            android:text="@string/respiracion_completa_paso1"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <TextView
            android:layout_marginTop="125dp"
            android:layout_width="300dp"
            android:layout_marginLeft="50dp"
            android:layout_height="wrap_content"
            android:text="@string/respiracion_completa_paso2"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <TextView
            android:layout_marginTop="200dp"
            android:layout_width="300dp"
            android:layout_marginLeft="50dp"
            android:layout_height="wrap_content"
            android:text="@string/respiracion_completa_paso3"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </RelativeLayout>


</LinearLayout>