<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:orientation="vertical"
    tools:context=".ui.ui.metodos.respiracion.ActivityMetodosRespiracion">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/btnRegresarMr"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/btn_regresar_margin_start"
            android:background="@drawable/regresar_xxxdpi_06" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/agne_regular"
            android:text="@string/metrespiracion"
            android:textAlignment="center"
            android:textColor="@color/gris_oscuro"
            android:textSize="@dimen/tamanio_titulos"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:fontFamily="@font/gt_america_regular"
        android:text="@string/metodos_respiracion_texto"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/tamanio_texto" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_respiracion_profunda"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:backgroundTint="@color/lavanda"
            android:fontFamily="@font/playfair_display_wght"
            android:text="@string/profunda"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="28dp"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/btn_respiracion_completa"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:backgroundTint="@color/lavanda"
            android:fontFamily="@font/playfair_display_wght"
            android:text="@string/completa"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="28dp"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/btn_respiracion_muscular"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:backgroundTint="@color/lavanda"
            android:fontFamily="@font/playfair_display_wght"
            android:text="@string/muscular"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="28dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"

            app:srcCompat="@drawable/trazado10_xxxdpi_06" />
    </LinearLayout>




</LinearLayout>