<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="2"
            android:scaleType="fitStart"
            android:translationX="100dp"
            android:translationY="-45dp"
            app:srcCompat="@drawable/icono" />

        <ImageView
            android:layout_width="330dp"
            android:layout_height="260dp"
            android:layout_weight="1"
            android:translationX="61dp"
            app:srcCompat="@drawable/trazado2_xxxdpi_06" />
    </LinearLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        app:srcCompat="@drawable/logo_xxxdpi_06" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/mensaje_bienvenida"
        android:textAlignment="center"
        android:textColor="@color/gris_oscuro"
        android:textSize="20sp"
        android:layout_marginBottom="60dp"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/boton_inicia_sesion"
        android:layout_alignParentTop="true"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/azul"
        android:text="@string/inicia_sesion"
        app:cornerRadius="50dp" />

    <Button
        android:id="@+id/boton_crea_cuenta"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_below="@id/boton_inicia_sesion"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/azul_claro"
        android:text="@string/crea_cuenta"
        app:cornerRadius="50dp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        app:srcCompat="@drawable/trazado1_xxxdpi_06" />


</RelativeLayout>

</LinearLayout>