<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:orientation="vertical"
    tools:context=".ui.ui.metodos.estiramiento.ActivyEstiramientoEstatico">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/boton_regresar_estiramiento_estatico"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_marginStart="@dimen/btn_regresar_margin_start"
            android:background="@drawable/regresar_xxxdpi_06" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="100dp"
            android:text="@string/estiramiento"
            android:textAlignment="center"
            android:textColor="@color/gris_oscuro"
            android:textSize="23sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/estatico"
        android:textColor="@color/gris"
        android:textSize="35sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="440dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/borde_naranja"></LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="70dp"
            android:text="@string/estaticoDesc"
            android:textAlignment="textStart"
            android:textColor="@color/gris"
            android:textSize="17.5sp" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginTop="440dp"
            app:srcCompat="@drawable/mancha3_xdpi_04" />
    </RelativeLayout>



</LinearLayout>