<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blanco"
    tools:context=".ui.ui.metodos.estiramiento.EstiramientoPasivo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/boton_regresar_estiramiento_pasivo"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/btn_regresar_margin_start"
            android:layout_marginEnd="25dp"
            android:background="@drawable/regresar_xxxdpi_06" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="100dp"
            android:text="@string/estiramiento"
            android:textAlignment="center"
            android:textColor="@color/gris_oscuro"
            android:fontFamily="@font/agne_regular"
            android:textStyle="bold"
            android:textSize="@dimen/tamanio_titulos" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/pasivo"
        android:textAlignment="textStart"
        android:textColor="@color/gris"
        android:textSize="40sp" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="440dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/borde_naranja"></LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="70dp"
            android:text="@string/pasivoDesc"
            android:textAlignment="textStart"
            android:textColor="@color/gris"
            android:textSize="17.5sp" />
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="300dp"
            android:layout_marginTop="9dp"
            app:srcCompat="@drawable/mancha1_xxdpi_05" />
    </RelativeLayout>
</LinearLayout>